src/main/webapp/css/cloud-style.css
/*<!--for height  working on child elements -->*/

html, body, .nav-container {
    height: 100%;
}

/* Remove the navbar's default margin-bottom and rounded borders */
.navbar {
    margin-bottom: 0;
    border-radius: 0;
    background-color: #E8E8E8;

}

.icons-container {
    background-color: #F8F8F8;
    text-align: left;
}

.table-header {
    padding-left: 10px;
    padding-right: 10px;
}

.place-left {
    text-align: left;
    padding-left: 20px;
}

.file-table-container {
    padding-right: 20px;
    width: 100%;
}

.table {
    width: 100%;
    /*padding-left: 15px;*/
    /*padding-right: 10px;*/
}

.table-padding {
    padding-left: 15px;
!important
}

/* Set gray background color and 100% height */
.sidenav {
    padding-top: 20px;
    background-color: #f1f1f1;
    height: 100%;
}

.pathLink {
    margin-left: 5px;
    margin-right: 5px;
}

.pathText {
    font-size: large;
}

.icon {
    width: 40px;
    height: 40px;
    margin: 5px 5px 5px 5px;

}

.control-group {
    margin-top: 20px;
}

.icon-link {
    align-self: left;
    alignment: left;
    align-self: left;
    text-align: left;
    color: #5e5e5e;
}

.tree-view {
    text-align: left;
}

.centered {
    position: fixed;
    top: 50%;
    left: 50%;
}

#nav_footer {
    padding: 10px;
}

/* On small screens, set height to 'auto' for sidenav and grid */
@media screen and (max-width: 767px) {
    .sidenav {
        height: auto;
        padding: 15px;
    }

    .row.content {
        height: auto;
    }
}

#popoverContent a:nth-child(n) {
    border: none;
}

.borderless a {
    border: none;
}

.details_btn {
    border: 1px solid #e0e0e0;
    border-radius: 5px;
    padding: 1px 9px 10px 9px;
    font-weight: bold;
    font-size: large;
}

.well-margin {
    margin: 15px 15px 15px 15px;
}

.no-padding {
    padding-left: 0px;
    padding-right: 0px;
}

.right-padding {
    padding-right: 20px;
}

.menu-text {
    font-size: large;
    color: #5e5e5e;
}

.table-text {
    color: #5e5e5e;
}

.hover {
    border: 10px dashed #ccc;
}

.max-height {
    height: 100%;
}

